# V-MiniGames

./: .gitignore  CMakeLists.txt  changes
res/shaders/: fragmentShader.frag  renderLights.frag  shadowMap.frag  vertexShader.vert
src/: MainClient.cpp  MainServer.cpp
src/apps/: AppClient.cpp  AppClient.h  AppServer.cpp  AppServer.h
src/core/: Camera.cpp  Camera.h  Clock.cpp  Clock.h  EventMgr.cpp  EventMgr.h  FPSLimiter.cpp  FPSLimiter.h  GuiMgr.cpp  GuiMgr.h  Lib.cpp  Lib.h  Random.h  ScreenList.cpp  ScreenList.h  TextAlign.h  VectorLib.h  Window.cpp  Window.h
src/etc/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  HSVColor.cpp  HSVColor.h  Voronoi.cpp  Voronoi.h
src/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/interfaces/: IApp.cpp  IApp.h  IConnHandler.cpp  IConnHandler.h  IConnInfo.cpp  IConnInfo.h  IException.cpp  IException.h  INetMgr.cpp  INetMgr.h  INetModule.cpp  INetModule.h  IPacketHandler.h  IResourceMgr.h  IScreen.h
src/lightning/: Light.cpp  Light.h  LightningMgr.cpp  LightningMgr.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/net/: Client.cpp  Client.h  ClientInfo.h  Connection.cpp  Connection.h  NetUID.h  Packager.cpp  Packager.h  PacketMgr.cpp  PacketMgr.h  PacketType.h  ParsedPacket.h  Protocol.h  Server.cpp  Server.h  ServerInfo.h
src/netmodules/: PingModule.cpp  PingModule.h  SetupModule.cpp  SetupModule.h
src/physics/: BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  PhysicsMgr.cpp  PhysicsMgr.h  PolygonCollider.cpp  PolygonCollider.h  VoidBody.cpp  VoidBody.h
src/project/: Game.cpp  Game.h  GameMgr.cpp  GameMgr.h
src/project/flappybird/: FlappyBird.cpp  FlappyBird.h
src/res/: FontMgr.h  MusicMgr.h  SoundBufferMgr.h  TextureMgr.h
src/screens/: ClientMainScreen.cpp  ClientMainScreen.h  ServerMainScreen.cpp  ServerMainScreen.h
src/throwmacros/: AppThrowMacros.h  GenericThrowMacros.h  WindowThrowMacros.h
